# cosmic-applet-logomenu

./: .gitignore  README.md  dev.cappsy.CosmicExtAppletLogoMenu.json  justfile
applet/: Cargo.toml
applet/src/: app.rs
i18n/en/: liblog.ftl
i18n/es/: liblog.ftl
i18n/fr/: liblog.ftl
i18n/pl/: liblog.ftl
i18n/pt/: cosmic_ext_logomenu_settings.ftl
i18n/pt-BR/: liblog.ftl
i18n/ru-RU/: liblog.ftl
i18n/sv/: liblog.ftl
liblog/: Cargo.toml
liblog/src/: lib.rs
res/: dev.cappsy.CosmicExtAppletLogoMenu.Settings.desktop  dev.cappsy.CosmicExtAppletLogoMenu.metainfo.xml
settings/: Cargo.toml
settings/src/: app.rs  main.rs
