[package]
name = "cosmic-ext-applet-logomenu"
version = "0.6.11"
edition = "2024"
license = "GPL-3.0"

[dependencies]
serde = "1.0.228"
zbus = { version = "5.13.2", default-features = false }
logind-zbus = "5.3.2"
rustix = { version = "1.1.3", features = ["process"] }
liblog = { path = "../liblog" }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "wayland"]

[features]
flatpak = []
